# mac-clip

./: Cargo.toml  Info.plist  LICENSE  README.md  create_dmg.sh
resources/macos/: com.mac-clip.daemon.plist
src/: daemon.rs  main.rs
